--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -270,28 +270,6 @@
   </section>
   <!-- Bootstrap End -->
 
-  <a class="in-page-link visually-hidden skip-link" href="#MainContent">{{ 'general.accessibility.skip_to_content' | t }}</a>
-
-  <div id="SearchDrawer" class="search-bar drawer drawer--top">
-    <div class="search-bar__table">
-      <div class="search-bar__table-cell search-bar__form-wrapper">
-        <form class="search search-bar__form" action="/search" method="get" role="search">
-          <button class="search-bar__submit search__submit btn--link" type="submit">
-            {% include 'icon-search' %}
-            <span class="icon__fallback-text">{{ 'general.search.submit' | t }}</span>
-          </button>
-          <input class="search__input search-bar__input" type="search" name="q" value="{{ search.terms | escape }}" placeholder="{{ 'general.search.placeholder' | t }}" aria-label="{{ 'general.search.placeholder' | t }}">
-        </form>
-      </div>
-      <div class="search-bar__table-cell text-right">
-        <button type="button" class="btn--link search-bar__close js-drawer-close">
-          {% include 'icon-close' %}
-          <span class="icon__fallback-text">{{ 'general.search.close' | t }}</span>
-        </button>
-      </div>
-    </div>
-  </div>
-
   {% section 'header' %}
 
   <div class="page-container" id="PageContainer">
@@ -301,6 +279,41 @@
     </main>
 
     {% section 'footer' %}
+
+    <script src="{{'//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'}}" defer="defer"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="{{'//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'}}" defer="defer"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="{{'new-age.min.js' | asset_url }}" defer="defer"></script>
+    <script src="{{'jquery.parallax.min.js' | asset_url }}" defer="defer"></script>
+    <script type="text/javascript">
+    $('.cta').parallax("-100px", 0.4);
+    $('header').parallax("-100px", 0.1);
+    </script>
+    <script>
+
+    $('.owl-carousel').owlCarousel({
+      loop:true,
+      margin:10,
+      dots: false,
+      nav:true,
+      autoplay: true,
+      responsive:{
+        0:{
+          items:1
+        },
+        600:{
+          items:3
+        },
+        1000:{
+          items:3
+        }
+      }
+    });
+
+    </script>
 
   </div>
 </body>
