--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -195,6 +195,7 @@
             <hr>
           </div>
           <div class="item">
+
             <img src="{{ 'steak.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Steak</h4>
             <span class="price">P150.00</span>
@@ -273,45 +274,47 @@
 
   <!-- <div class="page-container" id="PageContainer">
 
-  <main class="main-content" id="MainContent" role="main">
-  {{ content_for_layout }}
-</main> -->
+    <main class="main-content" id="MainContent" role="main">
+      {{ content_for_layout }}
+    </main> -->
 
-{% section 'footer' %}
-{{ '/maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'}}
+    {% section 'footer' %}
 
-<!-- Plugin JavaScript -->
-{{ '//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'}}
+    <script src="{{'//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'}}" defer="defer"></script>
 
-<!-- Theme JavaScript -->
-{{ 'new-age.min.js' | asset_url | script_tag }}
-{{ 'jquery.parallax.min.js' | asset_url | script_tag }}
+    <!-- Plugin JavaScript -->
+    <script src="{{'//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'}}" defer="defer"></script>
 
-<script type="text/javascript">
-$('.cta').parallax("-100px", 0.4);
-$('header').parallax("-100px", 0.1);
-</script>
-<script>
+    <!-- Theme JavaScript -->
+    <!-- <script src="{{'new-age.min.js' | asset_url }}" defer="defer"></script>
+    <script src="{{'jquery.parallax.min.js' | asset_url }}" defer="defer"></script> -->
+    {{ 'new-age.min.js' | asset_url | script_tag }}
+    {{ 'jquery.parallax.min.js' | asset_url | script_tag }}
+    <script type="text/javascript">
+    $('.cta').parallax("-100px", 0.4);
+    $('header').parallax("-100px", 0.1);
+    </script>
+    <script>
 
-$('.owl-carousel').owlCarousel({
-  loop:true,
-  margin:10,
-  dots: false,
-  nav:true,
-  autoplay: true,
-  responsive:{
-    0:{
-      items:1
-    },
-    600:{
-      items:3
-    },
-    1000:{
-      items:3
-    }
-  }
-});
+    $('.owl-carousel').owlCarousel({
+      loop:true,
+      margin:10,
+      dots: false,
+      nav:true,
+      autoplay: true,
+      responsive:{
+        0:{
+          items:1
+        },
+        600:{
+          items:3
+        },
+        1000:{
+          items:3
+        }
+      }
+    });
 
-</script>
+    </script>
 </body>
 </html>
