--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -31,7 +31,7 @@
   {% endif %}
 
   {% include 'social-meta-tags' %}
-<!-- 
+<!--
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
   {% include 'google-fonts' %}
 
@@ -70,8 +70,8 @@
   {{ '//fonts.googleapis.com/css?family=Dancing+Script:400,700' | stylesheet_tag }}
 
   <!-- Owl Stylesheets -->
-  <link rel="stylesheet" href="assets/owlcarousel/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="assets/owlcarousel/assets/owl.theme.default.min.css">
+  {{ 'owl.carousel.min.css' | asset_url | stylesheet_tag }}
+  {{ 'owl.theme.default.min.css' | asset_url | stylesheet_tag }}
 
   <!-- Plugin CSS -->
   {{ '//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' | stylesheet_tag }}
