--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -200,7 +200,7 @@
             <hr>
           </div>
           <div class="item">
-            <img src="{{ 'food-3png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
+            <img src="{{ 'food-3.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Chicken Wings</h4>
             <span class="price">P150.00</span>
             <hr>
@@ -266,8 +266,8 @@
     <!-- Theme JavaScript -->
     <!-- <script src="{{'new-age.min.js' | asset_url }}" defer="defer"></script>
     <script src="{{'jquery.parallax.min.js' | asset_url }}" defer="defer"></script> -->
-    {{ 'new-age.min.js' | asset_url | script_tag }}
-    {{ 'jquery.parallax.min.js' | asset_url | script_tag }}
+    <!-- {{ 'new-age.min.js' | asset_url | script_tag }}
+    {{ 'jquery.parallax.min.js' | asset_url | script_tag }} -->
     <script type="text/javascript">
     $('.cta').parallax("-100px", 0.4);
     $('header').parallax("-100px", 0.1);
