--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -31,46 +31,46 @@
   {% endif %}
 
   {% include 'social-meta-tags' %}
-<!--
+  <!--
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
   {% include 'google-fonts' %}
 
   <script>
   var theme = {
-    strings: {
-      addToCart: {{ 'products.product.add_to_cart' | t | json }},
-      soldOut: {{ 'products.product.sold_out' | t | json }},
-      unavailable: {{ 'products.product.unavailable' | t | json }},
-      showMore: {{ 'general.filters.show_more' | t | json }},
-      showLess: {{ 'general.filters.show_less' | t | json }}
-    },
-    moneyFormat: {{ shop.money_format | json }}
-  }
+  strings: {
+  addToCart: {{ 'products.product.add_to_cart' | t | json }},
+  soldOut: {{ 'products.product.sold_out' | t | json }},
+  unavailable: {{ 'products.product.unavailable' | t | json }},
+  showMore: {{ 'general.filters.show_more' | t | json }},
+  showLess: {{ 'general.filters.show_less' | t | json }}
+},
+moneyFormat: {{ shop.money_format | json }}
+}
 
-  document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
-  </script>
+document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+</script>
 -->
 
-  {{ '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' | stylesheet_tag }}
+{{ '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' | stylesheet_tag }}
 
-  {{ '//fonts.googleapis.com/css?family=Lato:100,300,400,700,400italic,700italic' | stylesheet_tag }}
-  {{ '//fonts.googleapis.com/css?family=Dancing+Script:400,700' | stylesheet_tag }}
+{{ '//fonts.googleapis.com/css?family=Lato:100,300,400,700,400italic,700italic' | stylesheet_tag }}
+{{ '//fonts.googleapis.com/css?family=Dancing+Script:400,700' | stylesheet_tag }}
 
-  <!-- Owl Stylesheets -->
-  {{ 'owl.carousel.min.css' | asset_url | stylesheet_tag }}
-  {{ 'owl.theme.default.min.css' | asset_url | stylesheet_tag }}
+<!-- Owl Stylesheets -->
+{{ 'owl.carousel.min.css' | asset_url | stylesheet_tag }}
+{{ 'owl.theme.default.min.css' | asset_url | stylesheet_tag }}
 
-  <!-- Plugin CSS -->
-  {{ '//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' | stylesheet_tag }}
+<!-- Plugin CSS -->
+{{ '//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' | stylesheet_tag }}
 
-  <!-- Theme CSS -->
-  {{ 'resto.css' | asset_url | stylesheet_tag }}
+<!-- Theme CSS -->
+{{ 'resto.css' | asset_url | stylesheet_tag }}
 
-  <!-- javascript -->
-  {{ 'jquery.min.js' | asset_url | script_tag }}
-  {{ 'owl.carousel.js' | asset_url | script_tag }}
+<!-- javascript -->
+{{ 'jquery.min.js' | asset_url | script_tag }}
+{{ 'owl.carousel.js' | asset_url | script_tag }}
 
-  {{ content_for_header }}
+{{ content_for_header }}
 </head>
 
 <body class="template-{{ template | split: '.' | first }}">
@@ -255,44 +255,42 @@
     <div class="overlay"></div>
   </section>
   <!-- Bootstrap End -->
-{{content_for_layout}}
-    {% section 'footer' %}
+  {{content_for_layout}}
+  {% section 'footer' %}
 
-    <script src="{{'//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'}}" defer="defer"></script>
+  {{ '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' | script_tag }}
+  {{ '//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js' | script_tag }}
 
-    <!-- Plugin JavaScript -->
-    <script src="{{'//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'}}" defer="defer"></script>
+  <!-- Theme JavaScript -->
+  <!-- <script src="{{'new-age.min.js' | asset_url }}" defer="defer"></script>
+  <script src="{{'jquery.parallax.min.js' | asset_url }}" defer="defer"></script> -->
+  {{ 'new-age.min.js' | asset_url | script_tag }}
+  {{ 'jquery.parallax.min.js' | asset_url | script_tag }}
+  <script type="text/javascript">
+  $('.cta').parallax("-100px", 0.4);
+  $('header').parallax("-100px", 0.1);
+  </script>
+  <script>
 
-    <!-- Theme JavaScript -->
-    <!-- <script src="{{'new-age.min.js' | asset_url }}" defer="defer"></script>
-    <script src="{{'jquery.parallax.min.js' | asset_url }}" defer="defer"></script> -->
-    <!-- {{ 'new-age.min.js' | asset_url | script_tag }}
-    {{ 'jquery.parallax.min.js' | asset_url | script_tag }} -->
-    <script type="text/javascript">
-    $('.cta').parallax("-100px", 0.4);
-    $('header').parallax("-100px", 0.1);
-    </script>
-    <script>
-
-    $('.owl-carousel').owlCarousel({
-      loop:true,
-      margin:10,
-      dots: false,
-      nav:true,
-      autoplay: true,
-      responsive:{
-        0:{
-          items:1
-        },
-        600:{
-          items:3
-        },
-        1000:{
-          items:3
-        }
+  $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin:10,
+    dots: false,
+    nav:true,
+    autoplay: true,
+    responsive:{
+      0:{
+        items:1
+      },
+      600:{
+        items:3
+      },
+      1000:{
+        items:3
       }
-    });
+    }
+  });
 
-    </script>
+  </script>
 </body>
 </html>
