--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -210,7 +210,7 @@ document.documentElement.className = document.documentElement.className.replace(
             <hr>
           </div>
           <div class="item">
-            <img src="img/food-3.png" class="img-responsive center-block">
+            <img src="{{ 'food-3.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Chicken Wings</h4>
             <span class="price">P150.00</span>
             <hr>
