--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -252,7 +252,7 @@ document.documentElement.className = document.documentElement.className.replace(
     </div>
     <div class="overlay"></div>
   </section>
-
+  {% section 'header' %}
   <!-- Bootstrap End -->
   {{content_for_layout}}
   {% section 'footer' %}
