--- a/sections/about.liquid
+++ b/sections/about.liquid
@@ -7,7 +7,7 @@
         </div>
         <div class="col-md-5 col-sm-5">
           <div class="caption-first">
-            <h3>{{section.settings.first_snippet_title}}</h3>
+            <!-- <h3>{{section.settings.first_snippet_title}}</h3> -->
             <p>Experience menu choices that reveal the character of Philippines, region by region, prepared with only the freshest ingredients by our highly skilled culinary team.</p>
           </div>
         </div>
@@ -15,7 +15,7 @@
       <div class="box">
         <div class="col-md-5 col-sm-5">
           <div class="caption-first">
-            <h3>{{section.settings.second_snippet_title}}</h3>
+            <!-- <h3>{{section.settings.second_snippet_title}}</h3> -->
             <p>It’s not just about first rate cuisine and an award winning wine list. Our highly trained and exceedingly personable staff are there to help you navigate our selections and ensure a memorable dining experience.</p>
           </div>
         </div>
@@ -30,19 +30,35 @@
 
 {% schema %}
 {
-	"name": "Featured Snippet",
+	"name": "Hero",
 	"settings": [
     {
   		"type": "text",
-  		"id": "first_snippet_title",
-  		"label": "First row title",
-      "default": "Modern Filipino Style"
+  		"id": "hero_tag",
+  		"label": "Tagline",
+      "default": "Featuring our latest book : "
 	  },
     {
   		"type": "text",
-  		"id": "second_snippet_title",
-  		"label": "Second row title",
-      "default": "Great Service!"
+  		"id": "hero_first_label",
+  		"label": "First Button Label",
+      "default": "Learn More"
+	  },
+    {
+  		"type": "url",
+  		"id": "hero_first_url",
+  		"label": "First Button URL"
+	  },
+    {
+  		"type": "text",
+  		"id": "hero_second_label",
+  		"label": "Second Button Label",
+      "default": "Learn More"
+	  },
+    {
+  		"type": "url",
+  		"id": "hero_second_url",
+  		"label": "Second Button URL"
 	  },
     {
       "type": "image_picker",
