--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,20 +1,20 @@
-
-<div class="buy-now">
-  <div class="container">
-    <div class="col-md-6 col-sm-12">
-      <h2 class="wow fadeIn">{{section.settings.hero_tag}}</h2>
-    </div>
-    <div class="col-md-6 col-sm-12">
-      <div class="col-sm-6">
-        <button type="button" class="btn btn-lm wow bounceIn">{{section.settings.hero_first_label}}</button>
-      </div>
-      <div class="col-sm-6">
-        <button type="button" class="btn btn-bn wow bounceIn">{{section.settings.hero_second_label}}</button>
+<header>
+  <div class="header-overlay">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="header-content">
+            <div class="header-content-inner">
+              <!-- <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1> -->
+              <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a> -->
+              <h1>Fun <span>Bites</span></h1>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
+</header>
 
 {% schema %}
 {
