--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -1,3 +1,13 @@
+<section class="cta" id="specialties">
+  <div class="parallax-layer parallax-layer-base">
+    <div class="cta-content ">
+      <div class="container text-center">
+        <h2>Our Menus</h2>
+      </div>
+    </div>
+    <div class="overlay"></div>
+  </div>
+</section>
 <section id="ourmenu" class="ourmenu bg-primary">
   <div class="container">
     <div class="col-md-10 col-md-offset-1 board">
