--- a/sections/about.liquid
+++ b/sections/about.liquid
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="col-md-7 col-sm-7">
-          <img src='{{section.settings.image | img_url: '537x' }}' alt="{{ shop.name }}" class="img-responsive second-food">
+          <img src="{{ '2.jpg' | asset_url }}" alt="{{ shop.name }}" class="img-responsive">
         </div>
       </div>
     </div>
@@ -43,12 +43,7 @@
   		"id": "second_snippet_title",
   		"label": "Second row title",
       "default": "Great Service!"
-	  },
-    {
-      "type": "image_picker",
-      "id": "image",
-      "label": "Image"
-    }
+	  }
   ]
 }
 {% endschema %}
