--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,3 +1,20 @@
+<header class="inner-pages">
+  <div class="header-overlay">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="header-content">
+            <div class="header-content-inner">
+              <!-- <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1> -->
+              <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a> -->
+              <h1>About Us</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 <section class="inner-page-section">
   <div class="container">
     <div class="col-md-5">
