--- a/assets/resto.css
+++ b/assets/resto.css
@@ -55,7 +55,7 @@ h6 {
   letter-spacing: 1px;
   color: #000;
 }
-.home h1{
+.template-index h1{
   font-family: 'Dancing Script', cursive;
   font-size: 90px !important;
   color: #fff;
