--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -91,8 +91,13 @@ document.documentElement.className = document.documentElement.className.replace(
   <script src="{{'jquery.parallax.min.js' | asset_url }}" defer="defer"></script> -->
   {{ 'new-age.min.js' | asset_url | script_tag }}
   {{ 'jquery.parallax.min.js' | asset_url | script_tag }}
+
   <script type="text/javascript">
-  $('.cta').parallax("-100px", 0.4);
+    {% if template == 'index' %}
+    $('.cta').parallax("-100px", 0.4);
+    {% else %}
+    $('.inner-box').parallax("2%", 0.1);
+    {% endif %}
   // $('header').parallax("-100px", 0.1);
   </script>
   <script>
