--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -71,7 +71,7 @@ document.documentElement.className = document.documentElement.className.replace(
 {{ content_for_header }}
 </head>
 
-<body class="template-{{ template | split: '.' | first }}">
+<body class="template-{{ template | split: '.' | first }} home">
 
 {% section 'header' %}
 
