--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -13,7 +13,20 @@
     <div class="col-md-10 col-md-offset-1 board">
       <!-- <h3 class="text-center">-Our Menu-</h3> -->
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem ipsum has been the ipsum has been the ipsum has been the</p>
-      <div class="owl-carousel owl-theme">
+      <div class="page-width">
+        <header class="section-header text-center">
+          <h1>{{ page_title }}</h1>
+        </header>
+
+        <div class="grid grid--uniform">
+          {% for collection in collections %}
+            <div class="grid__item small--one-half medium-up--one-third">
+              {% include 'collection-grid-item' %}
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+<div class="owl-carousel owl-theme">
         <div class="item">
           <img src="{{ 'food-3.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
           <h4>Chicken Wings</h4>
