--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -14,6 +14,59 @@
       <!-- <h3 class="text-center">-Our Menu-</h3> -->
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem ipsum has been the ipsum has been the ipsum has been the</p>
       <div class="owl-carousel owl-theme">
+        {%- assign collection = collections[section.settings.collection] -%}
+
+        {% case section.settings.grid %}
+          {% when '2' %}
+            {%- assign grid_item_width = 'medium-up--one-half' -%}
+            {%- assign image_size = '530x530' -%}
+          {% when '3' %}
+            {%- assign grid_item_width = 'small--one-half medium-up--one-third' -%}
+            {%- assign image_size = '345x345' -%}
+          {% when '4' %}
+            {%- assign grid_item_width = 'small--one-half medium-up--one-quarter' -%}
+            {%- assign image_size = '250x250' -%}
+          {% when '5' %}
+            {%- assign grid_item_width = 'small--one-half medium-up--one-fifth' -%}
+            {%- assign image_size = '195x195' -%}
+        {% endcase %}
+
+        {%- assign product_limit = section.settings.grid | times: section.settings.rows -%}
+
+        <div class="grid grid--uniform grid--view-items">
+          {% for product in collection.products limit: product_limit %}
+            <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }}">
+              {% include 'product-card-grid', grid_image_width: image_size %}
+            </div>
+          {% else %}
+
+            {% for i in (1..product_limit) %}
+              <div class="grid__item .grid__item--{{section.id}} {{ grid_item_width }}">
+                <div class="grid-view-item">
+                  <a href="#" class="grid-view-item__link">
+                    <div class="grid-view-item__image">
+                      {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
+                      {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg' }}
+                    </div>
+                    <div class="h4 grid-view-item__title">{{ 'homepage.onboarding.product_title' | t }}</div>
+                    <div class="grid-view-item__meta">
+                      {% include 'product-price' %}
+                    </div>
+                  </a>
+                </div>
+              </div>
+            {% endfor %}
+          {% endfor %}
+        </div>
+
+        {% if section.settings.show_view_all %}
+          <hr class="hr--invisible"></hr>
+          <div class="text-center">
+            <a href="{{ collection.url }}" class="btn">
+              {{ 'collections.general.view_all' | t }}
+            </a>
+          </div>
+        {% endif %}
 
         <div class="item">
           <img src="{{ 'food-3.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
