--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -22,7 +22,7 @@
 <div class="page-width">
   {% if section.settings.title != blank %}
     <div class="section-header text-center">
-      <h2>{{ section.settings.title | escape }} TET</h2>
+      <h2>{{ section.settings.title | escape }}</h2>
     </div>
   {% endif %}
 
