--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -72,45 +72,33 @@
         </div>
       </div>
 
-      <div class="page-width">
-        {% if section.settings.title != blank %}
-          <div class="section-header text-center">
-            <h2>{{ section.settings.title | escape }}</h2>
-          </div>
-        {% endif %}
-
-        {% case section.settings.grid %}
-          {% when '2' %}
-            {%- assign grid_item_width = 'medium-up--one-half' -%}
-            {%- assign image_size = '530x530' -%}
-          {% when '3' %}
-            {%- assign grid_item_width = 'small--one-half medium-up--one-third' -%}
-            {%- assign image_size = '340x340' -%}
-          {% when '4' %}
-            {%- assign grid_item_width = 'small--one-half medium-up--one-quarter' -%}
-            {%- assign image_size = '250x250' -%}
-          {% when '5' %}
-            {%- assign grid_item_width = 'small--one-half medium-up--one-fifth' -%}
-            {%- assign image_size = '190x190' -%}
-        {% endcase %}
-
-        <div class="collection-grid">
-          <div class="grid grid--uniform">
-            {% for block in section.blocks limit: section.blocks.size %}
-              <div class="grid__item {{ grid_item_width }}" {{ block.shopify_attributes }}>
-                {%- assign collection = collections[main-menu] -%}
-                {% include 'collection-grid-item', collection_image_size: image_size %}
-              </div>
-            {% endfor %}
-          </div>
-        </div>
-
-        {% if section.blocks.size == 0 %}
-          {% include 'no-blocks' %}
-        {% endif %}
-      </div>
-
       <a id="find-button" href="#about" class="btn btn-outline btn-xl page-scroll sr-button">View Full Menu</a>
+
+      <div class="grid grid--uniform grid--view-items">
+        {% for product in collection.products limit: product_limit %}
+          <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }}">
+            {% include 'product-card-grid', grid_image_width: image_size %}
+          </div>
+        {% else %}
+
+          {% for i in (1..product_limit) %}
+            <div class="grid__item .grid__item--{{section.id}} {{ grid_item_width }}">
+              <div class="grid-view-item">
+                <a href="#" class="grid-view-item__link">
+                  <div class="grid-view-item__image">
+                    {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
+                    {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg' }}
+                  </div>
+                  <div class="h4 grid-view-item__title">{{ 'homepage.onboarding.product_title' | t }}</div>
+                  <div class="grid-view-item__meta">
+                    {% include 'product-price' %}
+                  </div>
+                </a>
+              </div>
+            </div>
+          {% endfor %}
+        {% endfor %}
+      </div>
     </div>
 
   </div>
