--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -91,7 +91,7 @@
       {%- assign product_limit = 3 -%}
 
       <div class="grid grid--uniform grid--view-items">
-        {% for product in collections['main-menu'].products limit: product_limit %}
+        {% for product in collection.products limit: product_limit %}
           <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }}">
             {% include 'product-card-grid', grid_image_width: image_size %}
           </div>
