--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -71,51 +71,18 @@
           <hr>
         </div>
       </div>
-      {%- assign collection = collections['main-menu'].products -%}
+      {% if collections.preferidos.products.size > 0 %}
 
-      {% case 3 %}
-        {% when '2' %}
-          {%- assign grid_item_width = 'medium-up--one-half' -%}
-          {%- assign image_size = '530x530' -%}
-        {% when '3' %}
-          {%- assign grid_item_width = 'small--one-half medium-up--one-third' -%}
-          {%- assign image_size = '345x345' -%}
-        {% when '4' %}
-          {%- assign grid_item_width = 'small--one-half medium-up--one-quarter' -%}
-          {%- assign image_size = '250x250' -%}
-        {% when '5' %}
-          {%- assign grid_item_width = 'small--one-half medium-up--one-fifth' -%}
-          {%- assign image_size = '195x195' -%}
-      {% endcase %}
+{% for product in collections['main-menu'].products %}
 
-      {%- assign product_limit = 3 -%}
+  <li>
+  <img src="{{ product.featured_image | product_img_url: 'medium' }}" alt="{{ product.title | escape  }}" />
+  <a class="shop-now" href="{{ product.url }}">{{ product.title | escape  }}</a>
+  </li>
 
-      <div class="grid grid--uniform grid--view-items">
-        {% for product in collection.products limit: product_limit %}
-          <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }}">
-            {% include 'product-card-grid', grid_image_width: image_size %}
-          </div>
-        {% else %}
+{% endfor %}
 
-          {% for i in (1..product_limit) %}
-            <div class="grid__item .grid__item--{{section.id}} {{ grid_item_width }}">
-              <div class="grid-view-item">
-                <a href="#" class="grid-view-item__link">
-                  <div class="grid-view-item__image">
-                    {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
-                    {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg' }}
-                  </div>
-                  <div class="h4 grid-view-item__title">{{ 'homepage.onboarding.product_title' | t }}</div>
-                  <div class="grid-view-item__meta">
-                    {% include 'product-price' %}
-                  </div>
-                </a>
-              </div>
-            </div>
-          {% endfor %}
-        {% endfor %}
-      </div>
-
+{% endif %}
       <a id="find-button" href="#about" class="btn btn-outline btn-xl page-scroll sr-button">View Full Menu</a>
 
 
