--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -18,7 +18,7 @@
 
         {% for product in collections['main-menu'].products %}
         <div class="item">
-          <img src="{{ product.featured_image | product_img_url: 'medium' }}" alt="{{ product.title | escape  }}" class="img-responsive center-block""/>
+          <img src="{{ product.featured_image | product_img_url: 'medium' }}" alt="{{ product.title | escape  }}" class="img-responsive center-block"/>
           <a class="shop-now" href="{{ product.url }}"><h4>{{ product.title | escape  }}</h4></a>
           <span class="price">P150.00</span>
           <hr>
