--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -1,6 +1,6 @@
 <div class="page-width">
   <header class="section-header text-center">
-    <h1>{{ page_title }}</h1>
+    <h1>{{ page_title }}tests</h1>
   </header>
 
   <div class="grid grid--uniform">
@@ -11,4 +11,3 @@
     {% endfor %}
   </div>
 </div>
-
